# SCpaper-2021

./: .gitignore  .gitmodules  CMakeLists.txt  Model.h  README.md  main.cu
Attention/: Attention.cu  Attention.h  Attention_single.cu  Attention_single.h  CMakeLists.txt  OTFkernel_full.h  kernel_fuseO.cu  kernel_fuseO.h  kernels.cu  kernels.h  prune_attn.cu  prune_attn.h
Attention/mixed-precision/: mixed_attn.cu  mixed_attn.h
Attention/test/: CMakeLists.txt  test_attn.cu  test_attn_kernels.cu  test_prune_attn.cu
Encoder/: CMakeLists.txt  Encoder.cu  Encoder.h
Fused_attention/: CMakeLists.txt  Fused_attention.cu  Fused_attention.h  Linear_VO.cu  Linear_VO.h
Fused_attention/test/: CMakeLists.txt  testVO.cu  test_prune.cu  testfused.cu  testfusedEncoder.cu
LayerNorm/: CMakeLists.txt  LayerNorm.cu  LayerNorm.h
Linear/: CMakeLists.txt  Linear.cu  Linear.h  SPMM1x16.cu  SPMM_col.cu  SPMM_row.cu  SPMM_tile.cu  cusp.cu  gen_linear.hpp
Linear/test/: CMakeLists.txt  benchmark.cu  test_1x16.cu  test_col.cu  test_concurrent.cu  test_cublas.cu  test_cusp.cu  test_dense.cu  test_outprod.cu  test_row.cu  test_tile.cu
Linear/test/benchmark/: test.sh  test_col.cu
SkipLayerNorm/: CMakeLists.txt  SkipLayerNorm.cu  SkipLayerNorm.h
example/: CMakeLists.txt  main.cu  npy2pt.py  weights.hpp
lib/: CMakeLists.txt  CUDA_ptr.cu  CUDA_ptr.cuh  CUDA_ptr.hpp  Coord.h  IO.hpp  arr_t.hpp  constexpr_loop.hpp  cuda_map.cuh  graph.h  mma.hpp  range.hpp  reduce.cuh  type_list.hpp  utils.cu  utils.h  wtime.h
mat_type/: CMakeLists.txt  mat_type.h
mat_type/col_mat/: col_mat.cu  col_mat.hpp
mat_type/csr_mat/: CMakeLists.txt  csr_mat.cpp  csr_mat.h  dense2csr.py  dense_4_3.csr  mmio.py
mat_type/mat1x16/: mat1x16.cu  mat1x16.h
mat_type/row_mat/: CMakeLists.txt  SPMM_row_archieve.cuh  gen_mat.py  main.cu  row_mat.cu  row_mat.hpp
mat_type/tile_mat/: main.cu  tile_mat.cu  tile_mat.h
mycublas/: CMakeLists.txt  cublas.cu  cublas.h
test/: CMakeLists.txt  main.cu
test/Attention/: CMakeLists.txt  test_concurrent.cu  test_seqlen.cu  test_sparsity.cu
test/Encoder/: CMakeLists.txt  test_sparsity.cu  test_sparsity_single.cu
test/Table2/: CMakeLists.txt  Table.txt  main.cu  template.hpp  test.py
test/Transformer/: CMakeLists.txt  main.cu  template.hpp
